document heading and description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>TRIANGLE TRACKER</title>
   </head>
   <body>
+    <h1>TRIANGLE TRACKER</h1>
+    <p>This application determines whether 3 dimensions input by the user can form either:
+       <strong>equilateral, isosceles, scalene or no triangle.</strong> </p>
     
   </body>
 </html>
