footer added to document

--- a/index.html
+++ b/index.html
@@ -50,4 +50,9 @@
        
     
   </body>
+  
+  <footer class="main_footer">
+    <h1>TRIANGLE TRACKER COPYRIGHT 2019</h1>  
+  </footer>
+  
 </html>
