--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="triangle.css">
     <title>TRIANGLE TRACKER</title>
   </head>
   <body>
