--- a/index.html
+++ b/index.html
@@ -56,4 +56,6 @@
     <h1>TRIANGLE TRACKER COPYRIGHT 2019</h1>  
   </footer>
   
+  <script src="triangle.js" charset="utf-8"></script>  
+  
 </html>
